--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -786,13 +786,16 @@ choose_entry() {
 (defun =emms ()
   (interactive)
   (cl-letf (((symbol-function 'switch-to-buffer) #'display-buffer))
+    (if (or (null emms-playlist-buffer)
+            (not (buffer-live-p emms-playlist-buffer)))
+        (call-interactively 'emms-add-playlist))
     (emms)))
 
 (after! emms
   (setq
    emms-player-mpv-update-metadata t
    emms-playlist-buffer-name "*Music*"
-   emms-source-file-default-directory (expand-file-name "~/Music/"))
+   emms-source-file-default-directory (expand-file-name "~/Sync/"))
 
   (map! :map emms-playlist-mode-map
         :localleader
@@ -918,8 +921,7 @@ choose_entry() {
        (t
         (let ((track (emms-track 'url (uri playable))))
           (emms-track-set track 'info-artist "Spotify Playlist")
-          (emms-track-set track 'info-title
-                          (decode-coding-string (string-make-unibyte (name playable)) 'utf-8))
+          (emms-track-set track 'info-title (counsel-spotify--utf8 playable))
           (emms-playlist-insert-track track)
           (emms-playlist-mode-play-current-track)))))))
 #+end_src
