--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -98,7 +98,7 @@ To define guix dependencies add a =scheme= source code block. It'll be then tang
  :editor      (evil +everywhere) fold lispy snippets (format +onsave) multiple-cursors word-wrap
  :emacs       dired electric vc ibuffer undo
  :term        eshell vterm
- :tools       editorconfig (eval +overlay) (lookup +docsets) magit pdf (pass +auth) direnv make tree-sitter lsp
+ :tools       editorconfig (eval +overlay) (lookup +docsets) magit pdf (pass +auth) make tree-sitter lsp
  :checkers    syntax
  :lang        clojure data emacs-lisp
               (org +contacts +dragndrop +pandoc +present +hugo +roam2) beancount
@@ -852,6 +852,7 @@ choose_entry() {
 
 (defun =emms ()
   (interactive)
+  (require 'emms)
   (cl-letf (((symbol-function 'switch-to-buffer) #'display-buffer))
     (if (or (null emms-playlist-buffer)
             (not (buffer-live-p emms-playlist-buffer)))
@@ -935,6 +936,7 @@ choose_entry() {
 #+end_src
 #+begin_src elisp
 (use-package! emms-player-spotify
+  :after emms
   :custom
   (emms-player-spotify-launch-cmd "flatpak run com.spotify.Client")
   (emms-player-spotify-adblock t)
@@ -1235,7 +1237,7 @@ emacsclient -e \
          (eshell-load . eat-eshell-visual-command-mode)))
 
 (use-package! detached
-  :init
+  :config
   (detached-init)
   :bind (;; Replace `async-shell-command' with `detached-shell-command'
          ([remap async-shell-command] . detached-shell-command)
